Correctly hide overflow from main for border radius

--- a/src/_general.scss
+++ b/src/_general.scss
@@ -7,6 +7,7 @@ body {
   width: 100%;
   background-color: #fff;
   border-radius: 3px;
+  overflow: hidden;
 }
 
 .header {
